--- a/client/style.css
+++ b/client/style.css
@@ -57,6 +57,8 @@ html {
   border-radius: 20px;
   background-color: #d5dfe4;
   background-image: linear-gradient(46deg, #d5dfe4 20%, #9bd4da 70%, #ffffff 100%);  
+  /* background: rgb(255,1,1);
+  background: linear-gradient(360deg, rgba(255,1,1,1) 0%, rgba(255,190,0,1) 27%, rgba(255,255,255,1) 100%); */
   margin-bottom: 5px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 15px 18px;
 
